// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppVersion AppVersionDevices 1`] = `
<_default
  devices={
    Array [
      Object {
        "deviceId": "some-device-id-01",
        "deviceType": "ios",
        "owner": "test-user-1",
      },
      Object {
        "deviceId": "some-device-id-02",
        "deviceType": "android",
        "owner": "test-user-1",
      },
      Object {
        "deviceId": "some-device-id-03",
        "deviceType": "ios",
        "owner": "test-user-2",
      },
    ]
  }
  projectType="other"
/>
`;

exports[`AppVersion renders the details tab correctly with UDID 1`] = `
<Base
  paddingVertical="x6"
>
  <Notification
    icon="Lightbulb"
    type="inform"
  >
    You can register your devices on your Account Settings page on Bitrise.
  </Notification>
  <Table
    paddingVertical="x6"
    type="flat"
  >
    <TableHeader>
      <TableHeaderRow>
        <TableHeaderCell>
          User
        </TableHeaderCell>
        <TableHeaderCell>
          Device
        </TableHeaderCell>
        <TableHeaderCell>
          UDID
        </TableHeaderCell>
      </TableHeaderRow>
    </TableHeader>
    <TableBody>
      <TableRow
        key="some-device-id-01"
      >
        <TableCell>
          test-user-1
        </TableCell>
        <TableCell>
          ios
        </TableCell>
        <TableCell>
          some-device-id-01
        </TableCell>
      </TableRow>
      <TableRow
        key="some-device-id-02"
      >
        <TableCell>
          test-user-1
        </TableCell>
        <TableCell>
          android
        </TableCell>
        <TableCell>
          some-device-id-02
        </TableCell>
      </TableRow>
      <TableRow
        key="some-device-id-03"
      >
        <TableCell>
          test-user-2
        </TableCell>
        <TableCell>
          ios
        </TableCell>
        <TableCell>
          some-device-id-03
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</Base>
`;

exports[`AppVersion renders the details tab correctly with UUID 1`] = `
<Base
  paddingVertical="x6"
>
  <Notification
    icon="Lightbulb"
    type="inform"
  >
    You can register your devices on your Account Settings page on Bitrise.
  </Notification>
  <Table
    paddingVertical="x6"
    type="flat"
  >
    <TableHeader>
      <TableHeaderRow>
        <TableHeaderCell>
          User
        </TableHeaderCell>
        <TableHeaderCell>
          Device
        </TableHeaderCell>
        <TableHeaderCell>
          UUID
        </TableHeaderCell>
      </TableHeaderRow>
    </TableHeader>
    <TableBody>
      <TableRow
        key="some-device-id-01"
      >
        <TableCell>
          test-user-1
        </TableCell>
        <TableCell>
          ios
        </TableCell>
        <TableCell>
          some-device-id-01
        </TableCell>
      </TableRow>
      <TableRow
        key="some-device-id-02"
      >
        <TableCell>
          test-user-1
        </TableCell>
        <TableCell>
          android
        </TableCell>
        <TableCell>
          some-device-id-02
        </TableCell>
      </TableRow>
      <TableRow
        key="some-device-id-03"
      >
        <TableCell>
          test-user-2
        </TableCell>
        <TableCell>
          ios
        </TableCell>
        <TableCell>
          some-device-id-03
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</Base>
`;

exports[`AppVersion renders the details tab correctly with device ID 1`] = `
<Base
  paddingVertical="x6"
>
  <Notification
    icon="Lightbulb"
    type="inform"
  >
    You can register your devices on your Account Settings page on Bitrise.
  </Notification>
  <Table
    paddingVertical="x6"
    type="flat"
  >
    <TableHeader>
      <TableHeaderRow>
        <TableHeaderCell>
          User
        </TableHeaderCell>
        <TableHeaderCell>
          Device
        </TableHeaderCell>
        <TableHeaderCell>
          Device ID
        </TableHeaderCell>
      </TableHeaderRow>
    </TableHeader>
    <TableBody>
      <TableRow
        key="some-device-id-01"
      >
        <TableCell>
          test-user-1
        </TableCell>
        <TableCell>
          ios
        </TableCell>
        <TableCell>
          some-device-id-01
        </TableCell>
      </TableRow>
      <TableRow
        key="some-device-id-02"
      >
        <TableCell>
          test-user-1
        </TableCell>
        <TableCell>
          android
        </TableCell>
        <TableCell>
          some-device-id-02
        </TableCell>
      </TableRow>
      <TableRow
        key="some-device-id-03"
      >
        <TableCell>
          test-user-2
        </TableCell>
        <TableCell>
          ios
        </TableCell>
        <TableCell>
          some-device-id-03
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</Base>
`;
